Update chart query
